issues has been fixed

--- a/membership-final-test.html
+++ b/membership-final-test.html
@@ -516,9 +516,9 @@
                                   <select class="form-select form-control" id="Person_ResidentialStatus"
                                           name="Person.ResidentialStatus">
                                     <option selected="selected" value="">--SELECT--</option>
-                                    <option value="US Citizen">US Citizen</option>
-                                    <option value="Permanent Resident">Permanent Resident</option>
-                                    <option value="other">Other</option>
+                                    <option value="US CITIZEN">US CITIZEN</option>
+                                    <option value="PERMANENT RESIDENT">PERMANENT RESIDENT</option>
+                                    <option value="OTHER" data-action="other">Other</option>
                                   </select>
 
                                   <span class="field-validation-valid text-danger"
@@ -570,88 +570,148 @@
                                         data-valmsg-replace="true"></span>
                                 </div>
                               </div>
+                            </div>
+                          </div>
+
+                          <!-- work address -->
+                          <div class="pt-3 address-block-js">
+                            <h2 class="mb-1 fs-5 fw-semibold">Work Address</h2>
+                            <hr class="m-0 mb-2">
+
+                            <div class="row">
 
                               <div class="col-md-12">
                                 <div class="form-group required-group">
-                                  <label for="Person_AddressLine1">Work Address</label><span
+                                  <label for="Person_AddressLine1">Street Address</label><span
                                   class="required-mark text-danger">&nbsp;*</span>
                                   <textarea class="form-control" id="Person_AddressLine1" name="Person.AddressLine1"
-                                            rows="2">
+                                            rows="2"></textarea>
+                                </div>
+                              </div>
 
-                                  </textarea>
+                              <div class="col-md-6">
+                                <div class="form-group required-group">
+                                  <label for="selector-country-work">Country <span
+                                    class="required-mark text-danger">*</span></label>
+                                  <div class="select-box">
+                                    <div class="country-selector-holder-js">
+                                      <input type="text" id="selector-country-work" name="Person.Country"
+                                             class="form-control field-normal input-country-js">
+                                    </div>
+                                    <img src="assets/images/Iphone-spinner-2.gif" class="ajax-loader" alt="loading">
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="col-md-6">
+                                <div class="form-group required-group">
+                                  <label for="selector-state-work">State <span class="required-mark text-danger">*</span></label>
+                                  <div class="select-box">
+                                    <div class="state-selector-holder-js">
+                                      <input type="text" id="selector-state-work" name="Person.State"
+                                             class="form-control field-normal input-state-js">
+                                    </div>
+                                    <img src="assets/images/Iphone-spinner-2.gif" class="ajax-loader"
+                                         style="display: none" alt="loading">
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="col-md-6">
+                                <div class="form-group required-group">
+                                  <label for="selector-city-work">City <span
+                                    class="required-mark text-danger">*</span></label>
+                                  <div class="select-box">
+                                    <div class="city-selector-holder-js">
+                                      <input type="text" id="selector-city-work" name="Person.City"
+                                             class="form-control field-normal input-city-js">
+                                    </div>
+                                    <img src="assets/images/Iphone-spinner-2.gif" class="ajax-loader"
+                                         style="display: none" alt="loading">
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="col-md-6">
+                                <div class="form-group required-group">
+                                  <label for="Person_ZipCode_work">ZIP Code</label><span
+                                  class="required-mark text-danger">&nbsp;*</span>
+                                  <input class="form-control text-box single-line" id="Person_ZipCode_work"
+                                         name="Person.ZipCode" type="text" value="">
+                                  <span class="field-validation-valid text-danger" data-valmsg-for="Person.ZipCode"
+                                        data-valmsg-replace="true"></span>
                                 </div>
                               </div>
                             </div>
                           </div>
 
                           <!-- home address -->
-                          <div class="pt-3">
-                            <h2 class="mb-1 fs-5 fw-semibold">Home Address</h2>
+                          <div class="pt-3 address-block-js">
+                            <h2 class="mb-1 fs-5 fw-semibold">Billing/Residential Address</h2>
                             <hr class="m-0 mb-2">
-                          </div>
-                          <div class="row">
-                            <div class="col-md-12">
-                              <div class="form-group required-group">
-                                <label for="person-home-address">Street Address</label><span
-                                class="required-mark text-danger">&nbsp;*</span>
-                                <textarea class="form-control" id="person-home-address" name="Person.HomeAddress"
-                                          rows="2">
 
-                                </textarea>
-                              </div>
-                            </div>
-
-                            <div class="col-md-6">
-                              <div class="form-group required-group">
-                                <label for="selector-country-home">Country <span
-                                  class="required-mark text-danger">*</span></label>
-                                <div class="select-box">
-                                  <div class="country-selector-holder-js">
-                                    <input type="text" id="selector-country-home" name="Person.Country"
-                                           class="form-control field-normal input-country-js">
-                                  </div>
-                                  <img src="assets/images/Iphone-spinner-2.gif" class="ajax-loader" alt="loading">
+                            <div class="row">
+                              <div class="col-md-12">
+                                <div class="form-group required-group">
+                                  <label for="person-home-address">Street Address</label><span
+                                  class="required-mark text-danger">&nbsp;*</span>
+                                  <textarea class="form-control" id="person-home-address" name="Person.HomeAddress"
+                                            rows="2"></textarea>
                                 </div>
                               </div>
-                            </div>
 
-                            <div class="col-md-6">
-                              <div class="form-group required-group">
-                                <label for="selector-state-home">State <span class="required-mark text-danger">*</span></label>
-                                <div class="select-box">
-                                  <div class="state-selector-holder-js">
-                                    <input type="text" id="selector-state-home" name="Person.State"
-                                           class="form-control field-normal input-state-js">
+                              <div class="col-md-6">
+                                <div class="form-group required-group">
+                                  <label for="selector-country-home">Country <span
+                                    class="required-mark text-danger">*</span></label>
+                                  <div class="select-box">
+                                    <div class="country-selector-holder-js">
+                                      <input type="text" id="selector-country-home" name="Person.Country"
+                                             class="form-control field-normal input-country-js">
+                                    </div>
+                                    <img src="assets/images/Iphone-spinner-2.gif" class="ajax-loader" alt="loading">
                                   </div>
-                                  <img src="assets/images/Iphone-spinner-2.gif" class="ajax-loader"
-                                       style="display: none" alt="loading">
                                 </div>
                               </div>
-                            </div>
 
-                            <div class="col-md-6">
-                              <div class="form-group required-group">
-                                <label for="selector-city-home">City <span
-                                  class="required-mark text-danger">*</span></label>
-                                <div class="select-box">
-                                  <div class="city-selector-holder-js">
-                                    <input type="text" id="selector-city-home" name="Person.City"
-                                           class="form-control field-normal input-city-js">
+                              <div class="col-md-6">
+                                <div class="form-group required-group">
+                                  <label for="selector-state-home">State <span class="required-mark text-danger">*</span></label>
+                                  <div class="select-box">
+                                    <div class="state-selector-holder-js">
+                                      <input type="text" id="selector-state-home" name="Person.State"
+                                             class="form-control field-normal input-state-js">
+                                    </div>
+                                    <img src="assets/images/Iphone-spinner-2.gif" class="ajax-loader"
+                                         style="display: none" alt="loading">
                                   </div>
-                                  <img src="assets/images/Iphone-spinner-2.gif" class="ajax-loader"
-                                       style="display: none" alt="loading">
                                 </div>
                               </div>
-                            </div>
 
-                            <div class="col-md-6">
-                              <div class="form-group required-group">
-                                <label for="Person_ZipCode_home">ZIP Code</label><span
-                                class="required-mark text-danger">&nbsp;*</span>
-                                <input class="form-control text-box single-line" id="Person_ZipCode_home"
-                                       name="Person.ZipCode" type="text" value="">
-                                <span class="field-validation-valid text-danger" data-valmsg-for="Person.ZipCode"
-                                      data-valmsg-replace="true"></span>
+                              <div class="col-md-6">
+                                <div class="form-group required-group">
+                                  <label for="selector-city-home">City <span
+                                    class="required-mark text-danger">*</span></label>
+                                  <div class="select-box">
+                                    <div class="city-selector-holder-js">
+                                      <input type="text" id="selector-city-home" name="Person.City"
+                                             class="form-control field-normal input-city-js">
+                                    </div>
+                                    <img src="assets/images/Iphone-spinner-2.gif" class="ajax-loader"
+                                         style="display: none" alt="loading">
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="col-md-6">
+                                <div class="form-group required-group">
+                                  <label for="Person_ZipCode_home">ZIP Code</label><span
+                                  class="required-mark text-danger">&nbsp;*</span>
+                                  <input class="form-control text-box single-line" id="Person_ZipCode_home"
+                                         name="Person.ZipCode" type="text" value="">
+                                  <span class="field-validation-valid text-danger" data-valmsg-for="Person.ZipCode"
+                                        data-valmsg-replace="true"></span>
+                                </div>
                               </div>
                             </div>
                           </div>
@@ -1147,7 +1207,7 @@
   </footer>
 
   <!-- LOADER -->
-  <div class="loader-div">
+  <div class="loader-div active">
     <div class="lds-spinner">
       <div></div>
       <div></div>
