but fixed from script.js

--- a/membership-final-test-edit.html
+++ b/membership-final-test-edit.html
@@ -420,7 +420,6 @@
                         </div>
 
                         <div class="step-box-body">
-
                           <div class="row">
                             <div class="col-12">
                               <p class="font-600 text-medium mb-2 mt-2">Full Name</p>
@@ -519,7 +518,7 @@
                                     <option selected="selected" value="">--SELECT--</option>
                                     <option value="US CITIZEN">US CITIZEN</option>
                                     <option value="PERMANENT RESIDENT">PERMANENT RESIDENT</option>
-                                    <option value="OTHER" data-action="other">Other</option>
+                                    <option value="OTHER">Other</option>
                                   </select>
 
                                   <span class="field-validation-valid text-danger"
@@ -733,6 +732,7 @@
                               </div>
                             </div>
                           </div>
+
                         </div>
                       </div>
                     </div>
@@ -961,10 +961,8 @@
                             <!-- donation box -->
                             <div class="donation-wrapper donation-wrapper-js mb-3">
                               <div class="alert alert-primary">
-                                <h4 class="donation-wrapper-title fw-semibold fs-4">
-                                  Donation
-                                  <span class="fs-6 fw-semibold opacity-75">(Optional)</span>
-                                </h4>
+                                <h4 class="donation-wrapper-title fw-semibold fs-4">Donation <span
+                                  class="fs-6 fw-semibold opacity-75">(Optional)</span></h4>
 
                                 <div class="row">
                                   <div class="col-md-6">
