country, state, city pre selected

--- a/membership-final-test-edit.html
+++ b/membership-final-test-edit.html
@@ -594,7 +594,7 @@
                                   <label for="selector-country-work">Country <span
                                     class="required-mark text-danger">*</span></label>
                                   <div class="select-box">
-                                    <div class="country-selector-holder-js">
+                                    <div class="country-selector-holder-js" data-option="United States">
                                       <input type="text" id="selector-country-work" name="Person.Country"
                                              class="form-control field-normal input-country-js">
                                     </div>
@@ -607,7 +607,7 @@
                                 <div class="form-group required-group">
                                   <label for="selector-state-work">State <span class="required-mark text-danger">*</span></label>
                                   <div class="select-box">
-                                    <div class="state-selector-holder-js">
+                                    <div class="state-selector-holder-js" data-option="Illinois">
                                       <input type="text" id="selector-state-work" name="Person.State"
                                              class="form-control field-normal input-state-js">
                                     </div>
@@ -622,7 +622,7 @@
                                   <label for="selector-city-work">City <span
                                     class="required-mark text-danger">*</span></label>
                                   <div class="select-box">
-                                    <div class="city-selector-holder-js">
+                                    <div class="city-selector-holder-js" data-option="Yorkville">
                                       <input type="text" id="selector-city-work" name="Person.City"
                                              class="form-control field-normal input-city-js">
                                     </div>
@@ -645,76 +645,7 @@
                             </div>
                           </div>
 
-                          <!-- home address -->
-                          <div class="pt-3 address-block-js">
-                            <h2 class="mb-1 fs-5 fw-semibold">Billing/Residential Address</h2>
-                            <hr class="m-0 mb-2">
 
-                            <div class="row">
-                              <div class="col-md-12">
-                                <div class="form-group required-group">
-                                  <label for="person-home-address">Street Address</label><span
-                                  class="required-mark text-danger">&nbsp;*</span>
-                                  <textarea class="form-control" id="person-home-address" name="Person.HomeAddress"
-                                            rows="2"></textarea>
-                                </div>
-                              </div>
-
-                              <div class="col-md-6">
-                                <div class="form-group required-group">
-                                  <label for="selector-country-home">Country <span
-                                    class="required-mark text-danger">*</span></label>
-                                  <div class="select-box">
-                                    <div class="country-selector-holder-js">
-                                      <input type="text" id="selector-country-home" name="Person.Country"
-                                             class="form-control field-normal input-country-js">
-                                    </div>
-                                    <img src="assets/images/Iphone-spinner-2.gif" class="ajax-loader" alt="loading">
-                                  </div>
-                                </div>
-                              </div>
-
-                              <div class="col-md-6">
-                                <div class="form-group required-group">
-                                  <label for="selector-state-home">State <span class="required-mark text-danger">*</span></label>
-                                  <div class="select-box">
-                                    <div class="state-selector-holder-js">
-                                      <input type="text" id="selector-state-home" name="Person.State"
-                                             class="form-control field-normal input-state-js">
-                                    </div>
-                                    <img src="assets/images/Iphone-spinner-2.gif" class="ajax-loader"
-                                         style="display: none" alt="loading">
-                                  </div>
-                                </div>
-                              </div>
-
-                              <div class="col-md-6">
-                                <div class="form-group required-group">
-                                  <label for="selector-city-home">City <span
-                                    class="required-mark text-danger">*</span></label>
-                                  <div class="select-box">
-                                    <div class="city-selector-holder-js">
-                                      <input type="text" id="selector-city-home" name="Person.City"
-                                             class="form-control field-normal input-city-js">
-                                    </div>
-                                    <img src="assets/images/Iphone-spinner-2.gif" class="ajax-loader"
-                                         style="display: none" alt="loading">
-                                  </div>
-                                </div>
-                              </div>
-
-                              <div class="col-md-6">
-                                <div class="form-group required-group">
-                                  <label for="Person_ZipCode_home">ZIP Code</label><span
-                                  class="required-mark text-danger">&nbsp;*</span>
-                                  <input class="form-control text-box single-line" id="Person_ZipCode_home"
-                                         name="Person.ZipCode" type="text" value="">
-                                  <span class="field-validation-valid text-danger" data-valmsg-for="Person.ZipCode"
-                                        data-valmsg-replace="true"></span>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
 
                           <div class="consent-section">
                             <div class="form-group">
