--- a/membership-final-test.html
+++ b/membership-final-test.html
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="node_modules/select2/dist/css/select2.min.css">
 
   <!-- main style -->
-  <link rel="stylesheet" href="assets/css/style.css?v=2.0.4">
+  <link rel="stylesheet" href="assets/css/style.css?v=2.0.5">
 </head>
 
 <body>
@@ -1296,21 +1296,35 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title font-bold">Code of Conduct</h5>
-          <button type="button" class="btn btn-close" data-bs-dismiss="modal" aria-label="Close">
-            <svg aria-hidden="true" class="icon-svg-close" fill="currentColor" viewBox="0 0 20 20"
-                 xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd"
-                    d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-                    clip-rule="evenodd"></path>
-            </svg>
-          </button>
+
+          <div>
+            <button type="button" 
+            class="btn btn-close btn-expand-js me-3" 
+            id="btn-expand"
+            title="Maximize Window" 
+            data-bs-toggle="tooltip"
+            title=""
+            data-bs-original-title="Maximize Window">
+              <img src="assets/images/expand-window.png" alt="maximize" class="icon-maximize">
+              <img src="assets/images/minimize.png" alt="minimize" class="icon-minimize d-none">
+            </button>
+
+            <button type="button" class="btn btn-close" data-bs-dismiss="modal" aria-label="Close">
+              <svg aria-hidden="true" class="icon-svg-close" fill="currentColor" viewBox="0 0 20 20"
+                   xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd"
+                      d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                      clip-rule="evenodd"></path>
+              </svg>
+            </button>
+          </div>
         </div>
         <div class="modal-body">
           <div class="py-2 px-sm-3 px-md-4">
             <embed
               src="https://res.cloudinary.com/secure-api/image/upload/v1670245873/sunday-school/al-ilm/misc-documents/st4irj014djieqohupkb.pdf"
               width="100%"
-              height="600"
+              height="1200"
               frameborder="0"
               allowfullscreen>
 
@@ -1329,21 +1343,36 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title font-bold">Terms & Conditions</h5>
-          <button type="button" class="btn btn-close" data-bs-dismiss="modal" aria-label="Close">
-            <svg aria-hidden="true" class="icon-svg-close" fill="currentColor" viewBox="0 0 20 20"
-                 xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd"
-                    d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-                    clip-rule="evenodd"></path>
-            </svg>
-          </button>
+
+          <div>
+            <button type="button" 
+            class="btn btn-close btn-expand-js me-3" 
+            id="btn-expand"
+            title="Maximize Window" 
+            data-bs-toggle="tooltip"
+            title=""
+            data-bs-original-title="Maximize Window">
+              <img src="assets/images/expand-window.png" alt="maximize" class="icon-maximize">
+              <img src="assets/images/minimize.png" alt="minimize" class="icon-minimize d-none">
+            </button>
+
+            <button type="button" class="btn btn-close" data-bs-dismiss="modal" aria-label="Close">
+              <svg aria-hidden="true" class="icon-svg-close" fill="currentColor" viewBox="0 0 20 20"
+                   xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd"
+                      d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                      clip-rule="evenodd"></path>
+              </svg>
+            </button>
+          </div>
+
         </div>
         <div class="modal-body">
           <div class="py-2 px-sm-3 px-md-4">
             <embed
               src="https://res.cloudinary.com/secure-api/image/upload/v1670245873/sunday-school/al-ilm/misc-documents/st4irj014djieqohupkb.pdf"
               width="100%"
-              height="600"
+              height="1200"
               frameborder="0"
               allowfullscreen>
 
@@ -1417,7 +1446,7 @@
 
 <!-- script.js -->
 <!--<script src="assets/js/script.js?v=1.0.8"></script>-->
-<script src="assets/js/live/script.js?v=2.0.4"></script>
+<script src="assets/js/live/script.js?v=2.0.5"></script>
 
 <script>
 
